RESOLVED FIXED240406
REGRESSION (250501@main): [ Mac ] 2 TestWebKitAPI.WebAuthenticationPanel.GetAssertionLA tests failing
https://bugs.webkit.org/show_bug.cgi?id=240406
Summary REGRESSION (250501@main): [ Mac ] 2 TestWebKitAPI.WebAuthenticationPanel.GetA...
pascoe@apple.com
Reported 2022-05-13 17:10:19 PDT
Attachments
Patch (1.77 KB, patch)
2022-05-13 17:13 PDT, pascoe@apple.com
no flags
pascoe@apple.com
Comment 1 2022-05-13 17:13:55 PDT
Brent Fulgham
Comment 2 2022-05-16 10:11:47 PDT
Comment on attachment 459334 [details] Patch r=me
EWS
Comment 3 2022-05-16 10:44:21 PDT
Committed r294241 (250599@main): <https://commits.webkit.org/250599@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459334 [details].
Ryan Haddad
Comment 4 2022-05-16 14:40:25 PDT
*** Bug 240476 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.