REGRESSION (250501@main): [ Mac ] 2 TestWebKitAPI.WebAuthenticationPanel.GetAssertionLA tests failing https://bugs.webkit.org/show_bug.cgi?id=240406 rdar://93267082

Reviewed by Brent Fulgham.

Using the the truthiness of BOOL from attributes doesn't work here, instead compare it to @YES.

* UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticatorInternal::getExistingCredentials):

Canonical link: https://commits.webkit.org/250599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294241 268f45cc-cd09-0410-ab3c-d52691b4dbfc